--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Game created by Kelgors"
+      content="Make a line (row, column, diagonal) by placing your sign (cross or circle) in this two player game"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="author" content="Kelgors" />
+    <link rel="icon" href="%PUBLIC_URL%/icons/favicon.ico" sizes="any" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml"> -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/apple-touch-icon-180x180.png">
+    
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -39,5 +43,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script async src="https://analytics.kelgors.me/script.js" data-website-id="6151dec0-18d8-4e5e-9a2c-bd897a32a739"></script>
   </body>
 </html>
